# RAG-MCP-Server

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py
src/drive/: auth.py  sync.py
src/ingestion/: chunker.py  extractor.py
src/mcp_server/: oauth.py  server.py
src/store/: vector_store.py
tests/: conftest.py  test_auth.py  test_chunker.py  test_extractor.py  test_mcp_tools.py  test_sync.py  test_vector_store.py
tests/fixtures/: sample.docx
